--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ body {
     min-height: 100%;
 }
 
-@font-face {
-    font-family: 'Pixel';
-    src: url(../dom/fonts/Pixel.ttf);
-}
 
 [flappyzinho] {
     position: relative;
@@ -31,4 +27,48 @@ body {
     border: solid 5px dodgerblue;
     background-color: deepskyblue;
     overflow: hidden;
+}
+.passaro { 
+    position: absolute;
+    width: 60px;
+    left: calc(50% - 10%);
+    bottom: 50%;
+}
+
+.par-das-barreiras {
+    position: absolute;
+    left: 50px;
+    height: 100%;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.barreiras{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+}
+.corpo{
+    background:linear-gradient(100deg , green , lightgreen);
+    width: 80px;
+    height: 230px;
+    border: 2px solid black;
+}
+.borda{
+    background:linear-gradient(90deg , green , lightgreen);
+    border: 2px solid black;
+    width: 110px;
+    height: 30px;
+    border-radius: 5px;
+}
+.progresso{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 100px;
 }
